--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,7 +116,13 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.parsed-container img {
+  width: 100% !important;
+  border-radius: 20px;
 }
